Fix recipe for turkey slider, add img note

--- a/recipes/bean_burrito.html
+++ b/recipes/bean_burrito.html
@@ -8,6 +8,7 @@
         <h1>Bean Burritos</h1>
         <h4><a href="../index.html">Back to Recipes</a></h4>
         <img src="../img/bean-and-cheese-burritos.jpg" width="300" alt="A tasty-looking bean burrito">
+        <h6>Picture not mine - using for practice purposes</h6>
         <h4>*Put life story here before posting*</h4>
         <h2>Description:</h2>
             <p>This recipe is a quick and easy way to make a handful of bean burritos. Cook time is typically very short even when adding additional ingredients.</p>
