--- a/recipes/sausage_pasta.html
+++ b/recipes/sausage_pasta.html
@@ -8,6 +8,7 @@
         <h1>Sausage Pasta</h1>
         <h4><a href="../index.html">Back to Recipes</a></h4>
         <img src="../img/sausage-pasta.jpg" width="300" alt="Tasty-looking sausage pasta">
+        <h6>Picture not mine - using for practice purposes</h6>
         <h4>*Put life story here before posting*</h4>
         <h2>Description:</h2>
             <p>This recipe is a quick and easy way to make sausage pasta that can feed several people. Cook time is typically very short even when adding additional ingredients.</p>
