--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>My Recipes</h1>
+        <h6>Picture not mine - using for practice purposes</h6>
         <p>
             <ul><a href="./recipes/bean_burrito.html">Bean Burritos</a><img src="img/bean-and-cheese-burritos.jpg" width="75" alt="tasty-looking bean burritos"></ul>
             <ul><a href="./recipes/turkey_slider.html">Turkey Sliders</a><img src="img/turkey-and-cheese-sliders.jpg" width="75" alt="tasty-looking turkey sliders"></ul>
