--- a/recipes/turkey_slider.html
+++ b/recipes/turkey_slider.html
@@ -8,22 +8,23 @@
         <h1>Turkey Sliders</h1>
         <h4><a href="../index.html">Back to Recipes</a></h4>
         <img src="../img/turkey-and-cheese-sliders.jpg" width="300" alt="Tasty-looking turkey sliders">
+        <h6>Picture not mine - using for practice purposes</h6>
         <h4>*Put life story here before posting*</h4>
         <h2>Description:</h2>
-            <p>This recipe is a quick and easy way to make a handful of bean burritos. Cook time is typically very short even when adding additional ingredients.</p>
-            <p>I usually use canned refried beans, but whole cooked beans can be used if you prefer.</p>
+            <p>This recipe is a quick and easy way to make a plate of turkey sliders. Cook time is typically very short even when adding additional ingredients.</p>
+            <p>I usually use sweet rolls for the bread, but feel free to use any type of roll you prefer.</p>
         <h2>Ingredients:</h2>
             <p>
                 <ul>
-                    <li>Refried beans - One (1) 16oz can (I prefer refried black beans).</li>
-                    <li>White onion - One-half (1/2) medium onion. </li>
-                    <li>Shredded cheese - One-quarter (1/4) cup.</li>
-                    <li>Red bell pepper - One-half (1/2) medium pepper.</li>
-                    <li>Flour tortillas - 8in diameter, count of four (4).</li>
-                    <li>Cooking spray/oil - About one-half (1/2) tbsp.</li>
+                    <li>Deli turkey meat - Around 8oz.</li>
+                    <li>Pickled red onion - To taste (I use a few tbps). </li>
+                    <li>Sliced cheese - Six (6) pieces (I usually use swiss)</li>
+                    <li>Hawaiian Rolls - One (1) 8-count package.</li>
+                    <li>Mayo - Two (2) tbps.</li>
+                    <li>Hot mustard - One (1) tbps.</li>
+                    <li>Aluminum foil - 24 inches</li>
                     <li>Spices: <ul>
-                        <li>Cumin - to taste (I usually use one-quarter (1/4) tsp).</li>
-                        <li>Cinnamon - to taste (I usually use one-eigth (1/8) tsp).</li>
+                        <li>Black pepper - to taste (I usually use one-quarter (1/4) tsp).</li>
                         <li>Garlic Powder - to taste (I usually just use a dash).</li>
                         <li>Salt - to taste (I usually use one-eigth (1/8) tsp)</li>
                         <li>Red pepper flakes - to taste (I usually use one quarter (1/4) tsp).</li>
@@ -32,16 +33,13 @@
             </p>
             <p> <h2>Steps:</h2>
                 <ol>
-                    <li>Dice onion and bell pepper, and sauté in oiled pan for five to seven (5-7) minutes, or until onion begins to turn translucent.</li>
-                    <li>Open can of refried beans and season with listed spices (feel free to try my suggested amounts for your first try)</li>
-                    <li>Wrap tortillas in damp cloth or paper towel, and microwave for 20 seconds</li>
-                    <li>For each tortilla: <ol>
-                        <li>Add one quarter(1/4) total beans to tortilla</li>
-                        <li>Add one quarter(1/4) total cheese to tortilla</li>
-                        <li>Add one quarter(1/4) total vegetables to tortilla</li>
-                        <li>Roll contents into a burrito :)</li>
-                    </ol></li>
-                    <li>When ready to eat, microwave the burritos you plan to eat for about 30 seconds each, and toast on skillet or in toaster oven/air fryer. </li>                    
+                    <li>Preheat oven to 350 degrees F.</li>
+                    <li>Create sauce using spices, mustard, and mayo.</li>
+                    <li>Separate top and bottom halves of rolls into two sheets</li>
+                    <li>Distribute turkey and cheese slices evenly across bottom sheet of rolls</li>
+                    <li>Spread sauce evenly across top sheet of rolls</li>
+                    <li>Combine top and bottom sheets of rolls to create sheet of sliders</li>
+                    <li>Wrap in foil and put in oven for about 30 minutes.</li>                    
                 </ol>
             </p>
     </body>
