Add CSS, tinker with styling

--- a/recipes/bean_burrito.html
+++ b/recipes/bean_burrito.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
@@ -13,7 +15,8 @@
         <h2>Description:</h2>
             <p>This recipe is a quick and easy way to make a handful of bean burritos. Cook time is typically very short even when adding additional ingredients.</p>
             <p>I usually use canned refried beans, but whole cooked beans can be used if you prefer.</p>
-        <h2>Ingredients:</h2>
+        <div>
+            <h2>Ingredients:</h2>
             <p>
                 <ul>
                     <li>Refried beans - One (1) 16oz can (I prefer refried black beans).</li>
@@ -31,6 +34,7 @@
                     </ul></li>
                 </ul>
             </p>
+        </div>
             <p> <h2>Steps:</h2>
                 <ol>
                     <li>Dice onion and bell pepper, and sauté in oiled pan for five to seven (5-7) minutes, or until onion begins to turn translucent.</li>
