Clean up CSS, apply to all recipes

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     </head>
 
     <body>
-        <h1>My Recipes</h1>
-        <h6>Picture not mine - using for practice purposes</h6>
+        <h1 class="main_title">My Recipes</h1>
+        <h6>Pictures not mine - using for practice purposes</h6>
         <p>
-            <ul><a href="./recipes/bean_burrito.html">Bean Burritos</a><img src="img/bean-and-cheese-burritos.jpg" width="75" alt="tasty-looking bean burritos"></ul>
-            <ul><a href="./recipes/turkey_slider.html">Turkey Sliders</a><img src="img/turkey-and-cheese-sliders.jpg" width="75" alt="tasty-looking turkey sliders"></ul>
-            <ul><a href="./recipes/sausage_pasta.html">Sausage Pasta</a><img src="img/sausage-pasta.jpg" width="75" alt="tasty-looking sausage pasta"></ul>
+            <ul class="inlist"><a href="./recipes/bean_burrito.html">Bean Burritos</a><div class="tile"><img src="img/bean-and-cheese-burritos.jpg" alt="tasty-looking bean burritos"></div></ul>
+            <ul class="inlist"><a href="./recipes/turkey_slider.html">Turkey Sliders</a><div class="tile"><img src="img/turkey-and-cheese-sliders.jpg" alt="tasty-looking turkey sliders"></div></ul>
+            <ul class="inlist"><a href="./recipes/sausage_pasta.html">Sausage Pasta</a><div class="tile"><img src="img/sausage-pasta.jpg" alt="tasty-looking sausage pasta"></div></ul>
         </p>
     </body>
 </html>
