--- a/recipes/bean_burrito.html
+++ b/recipes/bean_burrito.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Bean Burritos</h1>
         <h4><a href="../index.html">Back to Recipes</a></h4>
-        <img src="../img/bean-and-cheese-burritos.jpg" width="300" alt="A tasty-looking bean burrito">
+        <img class="main" src="../img/bean-and-cheese-burritos.jpg" alt="A tasty-looking bean burrito">
         <h6>Picture not mine - using for practice purposes</h6>
         <h4>*Put life story here before posting*</h4>
         <h2>Description:</h2>
@@ -17,7 +17,7 @@
             <p>I usually use canned refried beans, but whole cooked beans can be used if you prefer.</p>
         <div>
             <h2>Ingredients:</h2>
-            <p>
+            <p class="inrecipe">
                 <ul>
                     <li>Refried beans - One (1) 16oz can (I prefer refried black beans).</li>
                     <li>White onion - One-half (1/2) medium onion. </li>
