--- a/recipes/turkey_slider.html
+++ b/recipes/turkey_slider.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Turkey Sliders</h1>
         <h4><a href="../index.html">Back to Recipes</a></h4>
-        <img src="../img/turkey-and-cheese-sliders.jpg" width="300" alt="Tasty-looking turkey sliders">
+        <img class="main" src="../img/turkey-and-cheese-sliders.jpg" width="300" alt="Tasty-looking turkey sliders">
         <h6>Picture not mine - using for practice purposes</h6>
         <h4>*Put life story here before posting*</h4>
         <h2>Description:</h2>
