--- a/recipes/sausage_pasta.html
+++ b/recipes/sausage_pasta.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Sausage Pasta</h1>
         <h4><a href="../index.html">Back to Recipes</a></h4>
-        <img src="../img/sausage-pasta.jpg" width="300" alt="Tasty-looking sausage pasta">
+        <img class="main" src="../img/sausage-pasta.jpg" width="300" alt="Tasty-looking sausage pasta">
         <h6>Picture not mine - using for practice purposes</h6>
         <h4>*Put life story here before posting*</h4>
         <h2>Description:</h2>
